Make the PackageKit backend more resistant to crashes in PackageKit

Only report searches' results if they're successful

BUG: 376538